--- a/sass-setup-kevin/package.json
+++ b/sass-setup-kevin/package.json
@@ -4,9 +4,9 @@
 	"description": "src: https://youtu.be/wYWf2m_yzBQ",
 	"main": "index.js",
 	"scripts": {
-		"dev": "parcel src/index.html",
+		"dev": "parcel src/index.html --open",
 		"build": "parcel build src/index.html",
-		"dev:legacy,yuck": "sass --watch src/scss:dist/css"
+		"dev:legacy,good_for_watching_compilation": "sass --watch src/scss:dist/css"
 	},
 	"keywords": [],
 	"author": "",
